--- a/app/src/main/res/layout/activity_binding_layout.xml
+++ b/app/src/main/res/layout/activity_binding_layout.xml
@@ -9,11 +9,17 @@
 
     <include
         android:id="@+id/retfoundactcontainer"
-        layout="@layout/retrieve_email_foundaccount_layout" />
+        layout="@layout/retrieve_email_foundaccount_layout"
+        android:visibility="gone"/>
 
     <include
         android:id="@+id/retfailaccontainer"
         layout="@layout/retrieve_email_tryagain_layout"
         android:visibility="gone" />
+
+    <include
+        android:id="@+id/editEmailSuccessLayout"
+        layout="@layout/edit_email_successful_layout"
+        android:visibility="visible" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
