--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/et_bg_gray"
     tools:context=".view.UserDetailsActivity"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
 
