--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -2,10 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <!-- TODO: Update blank fragment layout -->
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -15,21 +16,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:layout_marginTop="-50dp"
             android:src="@drawable/bg_onboard_frag_one"
-            android:layout_above="@+id/bottomIV"
-            android:scaleType="fitXY"/>
+            />
 
         <ImageView
             android:id="@+id/bottomIV"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_46sdp"
-            android:layout_alignParentBottom="true"
+            android:layout_width="116dp"
+            android:layout_height="46dp"
+            android:src="@drawable/ic_coyni_logo"
+            android:layout_marginBottom="60dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="@dimen/_85sdp"
-            android:layout_marginTop="@dimen/_7sdp"
-            android:layout_marginRight="@dimen/_85sdp"
-            android:layout_marginBottom="@dimen/_60sdp"
-            android:src="@drawable/ic_coyni_logo" />
-    </RelativeLayout>
+            android:layout_marginTop="7dp"
+            />
+    </LinearLayout>
 
 </FrameLayout>
