--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
 
     <RelativeLayout
@@ -15,19 +15,20 @@
             android:id="@+id/topIV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:scaleType="fitXY"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="-40dp"
             android:src="@drawable/bg_onboard_two" />
 
         <LinearLayout
             android:id="@+id/fragTwoBottomLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/topIV"
             android:layout_centerInParent="true"
-            android:layout_marginTop="12dp"
             android:orientation="vertical"
-            android:padding="21dp">
+            android:padding="21dp"
+            android:layout_below="@+id/topIV"
+            android:layout_marginTop="12dp"
+            android:layout_alignParentBottom="true">
 
             <TextView
                 android:layout_width="match_parent"
@@ -36,28 +37,28 @@
                 android:gravity="center"
                 android:text="Tokenize Your Money With coyni"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/_14ssp" />
+                android:textSize="@dimen/text_size_15sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_marginTop="30dp"
                 android:gravity="center">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_6sdp"
-                    android:layout_height="@dimen/_6sdp"
+                    android:layout_width="@dimen/text_size_7sp"
+                    android:layout_height="@dimen/text_size_7sp"
                     app:cardBackgroundColor="@color/primary_color"
-                    app:cardCornerRadius="@dimen/_3sdp" />
+                    app:cardCornerRadius="5dp" />
 
                 <TextView
                     android:id="@+id/oneTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_15sdp"
+                    android:layout_marginStart="15dp"
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp" />
+                    android:textSize="@dimen/text_size_12sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -66,19 +67,19 @@
                 android:gravity="center">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_6sdp"
-                    android:layout_height="@dimen/_6sdp"
+                    android:layout_width="@dimen/text_size_7sp"
+                    android:layout_height="@dimen/text_size_7sp"
                     app:cardBackgroundColor="@color/primary_color"
-                    app:cardCornerRadius="@dimen/_3sdp" />
+                    app:cardCornerRadius="5dp" />
 
                 <TextView
                     android:id="@+id/twoTV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_15sdp"
+                    android:layout_marginStart="15dp"
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp" />
+                    android:textSize="@dimen/text_size_12sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -87,10 +88,10 @@
                 android:gravity="center">
 
                 <androidx.cardview.widget.CardView
-                    android:layout_width="@dimen/_6sdp"
-                    android:layout_height="@dimen/_6sdp"
+                    android:layout_width="@dimen/text_size_7sp"
+                    android:layout_height="@dimen/text_size_7sp"
                     app:cardBackgroundColor="@color/primary_color"
-                    app:cardCornerRadius="@dimen/_3sdp" />
+                    app:cardCornerRadius="5dp" />
 
                 <TextView
                     android:id="@+id/threeTV"
@@ -99,7 +100,7 @@
                     android:layout_marginStart="15dp"
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp" />
+                    android:textSize="@dimen/text_size_12sp" />
             </LinearLayout>
 
         </LinearLayout>
