--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,7 +98,7 @@
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="Coyni@example.com"
                     android:imeOptions="actionNext"
-                    android:inputType="text"
+                    android:inputType="textEmailAddress"
                     android:maxLength="255"
                     android:padding="@dimen/_12sdp"
                     android:textColor="@color/black"
@@ -237,7 +237,6 @@
                 android:id="@+id/cvNext"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_44sdp"
-                android:layout_alignParentBottom="true"
                 android:layout_marginTop="@dimen/_33sdp"
                 android:layout_marginBottom="@dimen/_2sdp"
                 app:cardBackgroundColor="@color/inactive_color"
