--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -19,7 +19,7 @@
         <RelativeLayout
             android:id="@+id/layoutClose"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/imgClose"
@@ -34,6 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/layoutClose"
+            android:layout_marginTop="@dimen/_15sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="@string/create_new_password"
             android:textColor="@color/black"
