--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -16,8 +16,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="-40dp"
-            android:src="@drawable/bg_onboard_two" />
+            android:src="@drawable/bg_onboard_two"
+            android:adjustViewBounds="true"
+            android:layout_above="@+id/fragTwoBottomLL"
+            android:scaleType="fitXY"/>
 
         <LinearLayout
             android:id="@+id/fragTwoBottomLL"
@@ -26,9 +28,9 @@
             android:layout_centerInParent="true"
             android:orientation="vertical"
             android:padding="21dp"
-            android:layout_below="@+id/topIV"
             android:layout_marginTop="12dp"
-            android:layout_alignParentBottom="true">
+            android:layout_alignParentBottom="true"
+            >
 
             <TextView
                 android:layout_width="match_parent"
