--- a/app/src/main/res/layout/activity_account_limits.xml
+++ b/app/src/main/res/layout/activity_account_limits.xml
@@ -6,14 +6,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".view.AccountLimitsActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/_12sdp"
         android:background="@drawable/card_bottomradius"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/_12sdp">
 
         <ImageView
+            android:id="@+id/alBackbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_21sdp"
@@ -64,8 +66,6 @@
                     android:text="@string/buytoken"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp" />
-
-
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
@@ -82,18 +82,16 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:paddingTop="@dimen/_11sdp"
-                    android:paddingBottom="@dimen/_11sdp"
-
-                    >
+                    android:paddingBottom="@dimen/_11sdp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_11sdp"
                         android:gravity="center"
+                        android:orientation="horizontal"
                         android:paddingTop="@dimen/_8sdp"
-                        android:paddingBottom="@dimen/_10sdp"
-                        android:orientation="horizontal">
+                        android:paddingBottom="@dimen/_10sdp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -112,19 +110,19 @@
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="right"
                             android:paddingEnd="@dimen/_11sdp"
-                            android:text="@string/weeklimittext"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
 
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:orientation="horizontal"
                         android:paddingTop="@dimen/_8sdp"
-                        android:paddingBottom="@dimen/_10sdp"
-                        android:orientation="horizontal">
+                        android:paddingBottom="@dimen/_10sdp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -143,26 +141,26 @@
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="right"
                             android:paddingEnd="@dimen/_11sdp"
-                            android:text="@string/daylimittext"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
 
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                       android:gravity="center"
+                        android:gravity="center"
+                        android:orientation="horizontal"
                         android:paddingTop="@dimen/_8sdp"
-                        android:paddingBottom="@dimen/_10sdp"
-                        android:orientation="horizontal">
+                        android:paddingBottom="@dimen/_10sdp">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_11sdp"
                             android:fontFamily="@font/opensans_regular"
-                            android:gravity="left"
+                            android:gravity="start"
                             android:text="@string/credit_card"
                             android:textColor="#767676"
                             android:textSize="@dimen/_11ssp" />
@@ -172,9 +170,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_regular"
-                            android:gravity="right"
+                            android:gravity="end"
                             android:paddingEnd="@dimen/_11sdp"
-                            android:text="@string/daylimittext"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
 
@@ -232,9 +229,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_11sdp"
                         android:gravity="center"
+                        android:orientation="horizontal"
                         android:paddingTop="@dimen/_8sdp"
-                        android:paddingBottom="@dimen/_10sdp"
-                        android:orientation="horizontal">
+                        android:paddingBottom="@dimen/_10sdp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -253,19 +250,19 @@
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="right"
                             android:paddingEnd="@dimen/_11sdp"
-                            android:text="@string/weeklimittext"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
 
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:orientation="horizontal"
                         android:paddingTop="@dimen/_8sdp"
-                        android:paddingBottom="@dimen/_10sdp"
-                        android:orientation="horizontal">
+                        android:paddingBottom="@dimen/_10sdp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -284,20 +281,20 @@
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="right"
                             android:paddingEnd="@dimen/_11sdp"
-                            android:text="@string/daylimittext"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
 
 
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:paddingTop="@dimen/_8sdp"
-                        android:paddingBottom="@dimen/_10sdp"
                         android:layout_marginBottom="@dimen/_11sdp"
-                        android:orientation="horizontal">
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:paddingTop="@dimen/_8sdp"
+                        android:paddingBottom="@dimen/_10sdp">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -310,13 +307,12 @@
                             android:textSize="@dimen/_11ssp" />
 
                         <TextView
-                            android:id="@+id/tvBuyTokenGiftLimit"
+                            android:id="@+id/tvWithdrawTokenGiftCardLimit"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_regular"
                             android:gravity="right"
                             android:paddingEnd="@dimen/_11sdp"
-                            android:text="@string/weeklimittext"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
 
@@ -328,8 +324,7 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                />
+                android:layout_height="40dp" />
 
 
         </LinearLayout>
