--- a/app/src/main/res/layout/activity_err_with_ssn.xml
+++ b/app/src/main/res/layout/activity_err_with_ssn.xml
@@ -29,9 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_additional_action_required"
-        android:layout_marginLeft="@dimen/_103sdp"
+        android:layout_gravity="center"
         android:layout_marginTop="@dimen/_16sdp"
-
         />
     <TextView
         android:layout_width="match_parent"
@@ -39,7 +38,6 @@
         android:text="@string/add_ac"
         android:textSize="@dimen/_16ssp"
         android:textColor="@color/primary_black"
-
         android:textAlignment="center"
         android:layout_marginTop="@dimen/_14sdp"
         android:fontFamily="@font/opensans_bold"
@@ -81,8 +79,8 @@
                 android:fontFamily="@font/opensans_semibold"
                 android:hint="@string/ssnhint"
                 android:imeOptions="actionDone"
-                android:inputType="text"
-                android:maxLength="30"
+                android:inputType="number"
+                android:maxLength="10"
                 android:padding="@dimen/_12sdp"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12ssp" />
