--- a/app/src/main/res/layout/activity_identity_under_review.xml
+++ b/app/src/main/res/layout/activity_identity_under_review.xml
@@ -9,15 +9,13 @@
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
 
     >
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none">
+
         <LinearLayout
             android:id="@+id/idveriUnderReviewLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
 
     <ImageView
         android:id="@+id/closeBtnUnderReview"
@@ -27,6 +25,16 @@
         android:layout_marginTop="@dimen/_45sdp"
         android:layout_marginStart="@dimen/_21sdp"
         />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/_27sdp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_above="@id/idveriDoneBtn"
+                android:orientation="vertical">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -58,14 +66,14 @@
         android:layout_marginRight="@dimen/_21sdp"
         android:layout_marginTop="@dimen/_20sdp"
         android:textAlignment="center"
-        android:textStyle="normal"
         android:fontFamily="@font/opensans_regular"
         />
+            </LinearLayout>
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/idveriDoneBtn"
+                android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_43sdp"
-                android:layout_marginTop="@dimen/_145sdp"
                 android:layout_marginStart="@dimen/_21sdp"
                 android:layout_marginEnd="@dimen/_21sdp"
                 app:cardBackgroundColor="@color/primary_color"
@@ -82,8 +90,10 @@
                     android:fontFamily="@font/opensans_bold"
                     />
             </com.google.android.material.card.MaterialCardView>
+            </RelativeLayout>
         </LinearLayout>
-    </ScrollView>
+
+
 
 
 
