--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -9,7 +9,7 @@
     android:paddingStart="@dimen/_21sdp"
     android:paddingEnd="@dimen/_21sdp"
     tools:context=".view.IdentityVerificationActivity"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar" >
+    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
 
     <LinearLayout
         android:id="@+id/topbarll"
@@ -71,19 +71,24 @@
         android:textSize="@dimen/_16sdp"
         />
 
-    <ScrollView
-        android:id="@+id/scrlViewIV1st"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="none"
-        android:visibility="visible">
+
 
         <LinearLayout
             android:id="@+id/linearLayoutIdVe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:visibility="visible"
             android:layout_marginTop="@dimen/_14sdp">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_above="@id/bottomNaviLL"
+                android:orientation="vertical">
 
             <TextView
                 android:id="@+id/upidentityTV"
@@ -122,7 +127,7 @@
                     android:layout_marginBottom="@dimen/_11sdp"
                     android:layout_marginEnd="5dp"
                     android:fontFamily="@font/opensans_regular"
-                    android:lineSpacingExtra="@dimen/_6sdp"
+                    android:lineSpacingExtra="@dimen/_3sdp"
                     android:visibility="visible"
                     android:text="@string/contentuploadid"
                     android:textColor="@color/primary_black"
@@ -178,7 +183,7 @@
                     android:id="@+id/idVeriSSNET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_semibold"
+                    android:fontFamily="@font/opensans_regular"
                     android:hint="@string/ssnlast"
                     android:imeOptions="actionDone"
                     android:inputType="number"
@@ -186,7 +191,6 @@
                     android:paddingTop="@dimen/_12sdp"
                     android:paddingBottom="@dimen/_12sdp"
                     android:paddingLeft="10dp"
-
                     android:textColor="@color/dark_grey"
                     android:textSize="@dimen/_12ssp" />
 
@@ -255,12 +259,20 @@
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/bottomNaviLL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:paddingBottom="@dimen/_37sdp"
+                    android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/nextBtn"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_43sdp"
-                android:layout_marginTop="@dimen/_178sdp"
                 app:cardBackgroundColor="@color/inactive_color"
                 app:cardCornerRadius="@dimen/_21sdp">
 
@@ -271,7 +283,6 @@
                     android:fontFamily="@font/opensans_bold"
                     android:layout_marginTop="@dimen/_13sdp"
                     android:layout_marginBottom="@dimen/_13sdp"
-
                     android:text="@string/next"
                     android:textAlignment="center"
                     android:textColor="@color/white"
@@ -284,7 +295,6 @@
                 android:layout_height="@dimen/_43sdp"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_37sdp"
                 android:background="@drawable/exitbtnbackgroundcolor"
                 android:fontFamily="@font/opensans_bold"
                 android:paddingTop="@dimen/_15sdp"
@@ -292,10 +302,12 @@
                 android:textAlignment="center"
                 android:textColor="@color/primary_color"
                 android:textSize="@dimen/_12ssp" />
+                </LinearLayout>
+
+            </RelativeLayout>
 
         </LinearLayout>
 
-    </ScrollView>
 
     <ScrollView
         android:id="@+id/scrlViewIV2nd"
@@ -527,8 +539,10 @@
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="@string/countryhint"
                     android:imeOptions="actionDone"
-                    android:inputType="text"
-                    android:maxLength="30"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:editable="false"
+                    android:enabled="false"
                     android:padding="@dimen/_12sdp"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12ssp" />
@@ -539,8 +553,9 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/submitBtn"
                 android:layout_width="match_parent"
+
                 android:layout_height="@dimen/_43sdp"
-                android:layout_marginTop="@dimen/_14sdp"
+                android:layout_marginTop="@dimen/_22sdp"
                 app:cardBackgroundColor="@color/inactive_color"
                 app:cardCornerRadius="@dimen/_21sdp">
 
@@ -556,11 +571,11 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
+                android:layout_marginBottom="@dimen/_26sdp"
                 android:id="@+id/btnExit"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_43sdp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="56dp"
                 android:background="@drawable/exitbtnbackgroundcolor"
                 android:fontFamily="@font/opensans_bold"
                 android:paddingTop="@dimen/_14sdp"
