--- a/app/src/main/res/layout/fragment_three.xml
+++ b/app/src/main/res/layout/fragment_three.xml
@@ -64,7 +64,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center">
+                android:gravity="center"
+                android:layout_marginTop="@dimen/_10sdp">
                 <androidx.cardview.widget.CardView
                     android:layout_width="@dimen/text_size_7sp"
                     android:layout_height="@dimen/text_size_7sp"
@@ -84,7 +85,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center">
+                android:gravity="center"
+                android:layout_marginTop="@dimen/_10sdp">
                 <androidx.cardview.widget.CardView
                     android:layout_width="@dimen/text_size_7sp"
                     android:layout_height="@dimen/text_size_7sp"
