--- a/app/src/main/res/layout/outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/outlinebox_phone_number_layout.xml
@@ -47,7 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_gravity="center"
-            android:inputType="number"
+            android:inputType="number|textNoSuggestions"
             android:padding="14dp"
             android:hint="Phone Number"
             android:background="@android:color/transparent"
@@ -58,7 +58,9 @@
             android:singleLine="true"
             android:maxLines="1"
             android:textCursorDrawable="@drawable/cursor_color"
-            android:fontFamily="@font/opensans_semibold"/>
+            android:fontFamily="@font/opensans_semibold"
+            android:longClickable="false"
+            android:digits="0123456789"/>
 
 
     </LinearLayout>
