--- a/app/src/main/res/layout/fragment_id_ve_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_id_ve_bottom_sheet.xml
@@ -204,7 +204,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="@dimen/_20sdp"
             android:layout_marginLeft="32dp"
             android:layout_marginTop="18dp"
             android:orientation="horizontal" />
