--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,8 +9,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,7 +40,6 @@
                     android:id="@+id/loginBGIV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="-25dp"
                     android:src="@drawable/ic_logintoplogo"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +47,8 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0"
-                    app:layout_editor_absoluteX="336.24dp" />
+                    app:layout_editor_absoluteX="336.24dp"
+                    android:adjustViewBounds="true"/>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -96,13 +95,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
-                    android:hint="Coyni@example.com"
+                    android:hint="Email"
                     android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress"
-                    android:maxLength="255"
-                    android:padding="@dimen/_12sdp"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_12ssp" />
+                    android:inputType="textEmailAddress|textNoSuggestions"
+                    android:padding="@dimen/_14sdp"
+                    android:textColor="@color/text_color"
+                    android:textColorHint="@color/light_gray"
+                    android:textCursorDrawable="@drawable/cursor_color"
+                    android:textSize="@dimen/_12ssp"
+                    android:longClickable="false"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-,." />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -110,7 +114,7 @@
                 android:id="@+id/layoutEmailError"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-10dp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:orientation="horizontal"
                 android:visibility="gone">
 
@@ -156,22 +160,23 @@
                     android:fontFamily="@font/opensans_semibold"
                     android:hint="************"
                     android:imeOptions="actionDone"
-                    android:inputType="textPassword"
+                    android:inputType="textPassword|textNoSuggestions"
                     android:maxLength="12"
-                    android:padding="@dimen/_12sdp"
-                    android:textColor="@color/black"
+                    android:padding="@dimen/_14sdp"
+                    android:textColor="@color/text_color"
+                    android:textColorHint="@color/light_gray"
+                    android:textCursorDrawable="@drawable/cursor_color"
                     android:textSize="@dimen/_12ssp"
-                    app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
-                    app:boxCornerRadiusBottomStart="@dimen/_10sdp"
-                    app:boxCornerRadiusTopEnd="@dimen/_10sdp"
-                    app:boxCornerRadiusTopStart="@dimen/_10sdp" />
+                    android:longClickable="false"
+                    android:singleLine="true"
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%^*()_+={}[]|\;:,.?/" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <LinearLayout
                 android:id="@+id/layoutPwdError"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-10dp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:orientation="horizontal"
                 android:visibility="gone">
 
