--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -196,7 +196,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="Email"
                         android:imeOptions="actionNext"
-                        android:inputType="textEmailAddress|textNoSuggestions"
+                        android:inputType="textEmailAddress"
                         android:padding="@dimen/_14sdp"
                         android:textColor="@color/text_color"
                         android:textColorHint="@color/light_gray"
