--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -81,7 +81,7 @@
                         app:expandedHintEnabled="false"
                         app:hintTextColor="@color/primary_green"
                         app:passwordToggleEnabled="true"
-                        app:passwordToggleTint="#767676">
+                        app:passwordToggleTint="@color/xdark_gray">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/etPassword"
@@ -106,7 +106,7 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:paddingBottom="@dimen/_3sdp"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
                         <View
                             android:id="@+id/strengthOne"
@@ -166,7 +166,8 @@
                     app:errorIconDrawable="@null"
                     app:expandedHintEnabled="false"
                     app:hintTextColor="@color/primary_green"
-                    app:passwordToggleEnabled="true">
+                    app:passwordToggleEnabled="true"
+                    app:passwordToggleTint="@color/xdark_gray">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etCPassword"
