--- a/app/src/main/res/layout/activity_otpvalidation.xml
+++ b/app/src/main/res/layout/activity_otpvalidation.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:id="@+id/layoutMain"
     android:orientation="vertical"
     android:padding="@dimen/_20sdp"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
@@ -82,11 +82,11 @@
 
         <TextView
             android:id="@+id/resendTV"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="@dimen/_10sdp"
             android:fontFamily="@font/opensans_semibold"
-            android:gravity="center"
             android:text="Resend"
             android:textColor="@color/primary_color"
             android:textSize="@dimen/_12ssp" />
